Implemented QR scanner
- Implemented QR scanner activity
- Added 'home screen' elements with scan button
- Removed progress bar from main activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
 
     // circle view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // QR scanner
+    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
 }
