--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,15 @@ dependencies {
 
     // logging
     implementation("io.github.microutils:kotlin-logging-jvm:3.0.0")
+
+    // android-iconify
+    implementation 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2' // (v4.5)
+    implementation 'com.joanzapata.iconify:android-iconify-entypo:2.2.2' // (v3,2015)
+    implementation 'com.joanzapata.iconify:android-iconify-typicons:2.2.2' // (v2.0.7)
+    implementation 'com.joanzapata.iconify:android-iconify-material:2.2.2' // (v2.0.0)
+    implementation 'com.joanzapata.iconify:android-iconify-material-community:2.2.2' // (v1.4.57)
+    implementation 'com.joanzapata.iconify:android-iconify-meteocons:2.2.2' // (latest)
+    implementation 'com.joanzapata.iconify:android-iconify-weathericons:2.2.2' // (v2.0)
+    implementation 'com.joanzapata.iconify:android-iconify-simplelineicons:2.2.2' // (v1.0.0)
+    implementation 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2' // (v2.0.1)
 }
