--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ScannerActivity"
-            android:exported="true">
+            android:exported="true"
+            android:parentActivityName=".MainActivity">
         </activity>
 
         <meta-data
