--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // retrofit API calls and JSON converter
+    // Retrofit API calls and JSON converter
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+
+    // Https and JSON packages for mollie
+    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
+    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.14.1'
 
     // circle view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -68,7 +72,4 @@ dependencies {
     implementation 'com.joanzapata.iconify:android-iconify-weathericons:2.2.2' // (v2.0)
     implementation 'com.joanzapata.iconify:android-iconify-simplelineicons:2.2.2' // (v1.0.0)
     implementation 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2' // (v2.0.1)
-
-    // mollie OkHttp
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
 }
