--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
 
-    // Https for retrofit call to mollie
+    // Https and JSON packages for mollie
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
+    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.14.1'
 
     // circle view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
